Testing SVG more

--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -28,4 +28,12 @@ https://uptimerobot.com/
 
 
 
-![splunk](/assets/images/splunk.svg){:height="500px" width="500px"}
+![splunk](/assets/images/splunk.svg){:height="50px" width="50x"}
+
+![github](/assets/images/github.svg)
+
+![google](/assets/images/google.svg)
+
+![googlecloud](/assets/images/googlecloud.svg)
+
+![amazonaws](/assets/images/amazonaws.svg)
