--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -9,7 +9,7 @@ tags: github jekyll
 
 Tesitng using embedded code:
 
-<script src="https://gist-it.appspot.com/http://github.com/fontora/splunk/blob/master/Searches/Datamodels/ES_CIM_Datamodels.spl"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Ffontora%2Fsplunk%2Fblob%2Fmaster%2FRunbooks%2Fsplunk_core_install.md&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 
 Setting a custom domain using Google Domains on GitHub Pages
 https://medium.com/@hossainkhan/using-custom-domain-for-github-pages-86b303d3918a
