--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -8,6 +8,10 @@ tags: github jekyll
 
 <div style="text-align: right;">{{ page.date | date: '%B %d, %Y' }}</div>
 
+something
+<script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
+something else
+
 Tesitng using embedded code:
 
 <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Ffontora%2Fsplunk%2Fblob%2Fmaster%2FRunbooks%2Fsplunk_core_install.md&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
@@ -25,6 +29,9 @@ https://www.statuscake.com/
 
 https://shields.io/
 
+https://favicon.io/
+
+https://github.com/poole/lanyon/
 
 
 
