--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -4,32 +4,23 @@ categories: tech
 tags: github jekyll
 ---
 
-# Welcome
+## Setting up fontora.dev
+
+---
 
 <div style="text-align: right;">{{ page.date | date: '%B %d, %Y' }}</div>
 
-something
-<script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
-something else
+Got round to setting up a site. Well, more so fixing previous half jobs over the last few years.
 
-Setting a custom domain using Google Domains on GitHub Pages
-https://medium.com/@hossainkhan/using-custom-domain-for-github-pages-86b303d3918a
+The focus will mainly be around Splunk and related technical fields. This site was built using:
 
-Social media icons
-https://jreel.github.io/social-media-icons-on-jekyll/
-
-Jekyll Docs
-https://jekyllrb.com/docs
-
-https://www.statuscake.com/
-
-https://shields.io/
-
-https://favicon.io/
-
-https://github.com/poole/lanyon/
-
-
+- https://medium.com/@hossainkhan/using-custom-domain-for-github-pages-86b303d3918a
+- https://jreel.github.io/social-media-icons-on-jekyll/
+- https://github.com/poole/lanyon/
+- https://jekyllrb.com/docs
+- https://www.statuscake.com/
+- https://shields.io/
+- https://favicon.io/
 
 ![splunk](/assets/images/splunk.svg){:height="50px" width="50x"}
 
@@ -40,3 +31,7 @@ https://github.com/poole/lanyon/
 ![googlecloud](/assets/images/googlecloud.svg)
 
 ![amazonaws](/assets/images/amazonaws.svg)
+
+something
+<script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
+something else
