--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -17,7 +17,7 @@ The focus will mainly be around Splunk and related technical fields. This site w
 - https://medium.com/@hossainkhan/using-custom-domain-for-github-pages-86b303d3918a
 - https://jreel.github.io/social-media-icons-on-jekyll/
 - https://github.com/poole/lanyon/
-- https://jekyllrb.com/docs
+- https://jekyllrb.com/docs/
 - https://www.statuscake.com/
 - https://shields.io/
 - https://favicon.io/
@@ -25,6 +25,12 @@ The focus will mainly be around Splunk and related technical fields. This site w
 ![splunk](/assets/images/splunk.svg){:height="50px" width="50x"}
 
 ![github](/assets/images/github.svg)
+
+![github](/images/github.svg)
+
+![github](/public/github.svg)
+
+![github](/public/images/github.svg)
 
 ![google](/assets/images/google.svg)
 
