--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -22,7 +22,7 @@ The focus will mainly be around Splunk and related technical fields. This site w
 - https://shields.io/
 - https://favicon.io/
 
-![splunk](/assets/images/splunk.svg){:height="50px" width="50x"}
+![splunk](/public/images/splunk.svg){:height="50px" width="50x"}
 
 ![github](/assets/images/github.svg)
 
@@ -32,11 +32,11 @@ The focus will mainly be around Splunk and related technical fields. This site w
 
 ![github](/public/images/github.svg)
 
-![google](/assets/images/google.svg)
+![google](/public/images/google.svg)
 
-![googlecloud](/assets/images/googlecloud.svg)
+![googlecloud](/public/images/googlecloud.svg)
 
-![amazonaws](/assets/images/amazonaws.svg)
+![amazonaws](/public/images/amazonaws.svg)
 
 something
 <script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
