--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -24,19 +24,13 @@ The focus will mainly be around Splunk and related technical fields. This site w
 
 ![splunk](/public/images/splunk.svg){:height="50px" width="50x"}
 
-![github](/assets/images/github.svg)
+![github](/public/images/github.svg){:height="50px" width="50x"}
 
-![github](/images/github.svg)
+![google](/public/images/google.svg){:height="50px" width="50x"}
 
-![github](/public/github.svg)
+![googlecloud](/public/images/googlecloud.svg){:height="50px" width="50x"}
 
-![github](/public/images/github.svg)
-
-![google](/public/images/google.svg)
-
-![googlecloud](/public/images/googlecloud.svg)
-
-![amazonaws](/public/images/amazonaws.svg)
+![amazonaws](/public/images/amazonaws.svg){:height="50px" width="50x"}
 
 something
 <script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
