Testing code block

--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -8,7 +8,7 @@ tags: github jekyll
 
 ---
 
-<div style="text-align: right;">{{ page.date | date: '%B %d, %Y' }}</div>
+<div style="text-align: right;">{{ page.date | date: '%B %d, %Y' }}</div><br />
 
 Got round to setting up a site. Well, more so fixing previous half jobs over the last few years.
 
