Testing code block 2

--- a/_posts/2023-04-30-thing.md
+++ b/_posts/2023-04-30-thing.md
@@ -5,12 +5,23 @@ categories: linux
 tags: sysadmin commands
 ---
 
-# Teeeeeeeeeeeeeeeeeeeeeeeeeest
+# {{ page.title }}
 
-<small>{{ page.date | date: '%B %d, %Y' }}</small>
-
+<div style="text-align: right;">{{ page.date | date: '%B %d, %Y' }}</div><br />
 ---
 
-**It's been a longer while**
+## sudo &excl;&excl;
 
-f
+Damn I forgot to use sudo (maybe I should just log in as root?).\
+No! Just use this bad boy.
+
+```shell
+fontora@banshee:~$ systemctl daemon-reload
+==== AUTHENTICATING FOR org.freedesktop.systemd1.reload-daemon ===
+Authentication is required to reload the systemd state.
+Authenticating as: fontora
+Password:
+
+fontora@banshee:~$ sudo !!
+sudo systemctl daemon-reload
+```
