--- a/_posts/2020-08-27-fontora.dev.md
+++ b/_posts/2020-08-27-fontora.dev.md
@@ -35,3 +35,7 @@ The focus will mainly be around Splunk and related technical fields. This site w
 something
 <script src="https://gist.github.com/fontora/0ac2e899efa372bba0137d89cd8f397b.js?file=disable-thp.service"></script>
 something else
+
+Edit update:
+- https://pages.github.com/versions/
+- https://jekyllcodex.org/without-plugin/lightbox/
